--- a/Homework/css/main.css
+++ b/Homework/css/main.css
@@ -10,9 +10,9 @@ body {
 }
 
 .btn-primary {
-    background-color: #007bff; 
+    background-color: #00A19C; 
 }
 
 .btn-warning {
-    background-color: #ffc107; /
+    background-color: #80142b;
 }
